Fix card being too small

--- a/src/app/pages/player/contents/simple-question/simple-question.component.scss
+++ b/src/app/pages/player/contents/simple-question/simple-question.component.scss
@@ -3,7 +3,6 @@
   flex-grow: 1;
   height:100%;
   perspective: 1000px;
-  overflow-x: hidden;
 
   &.flipped {
     overflow: hidden;
